--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
